fixed images stretching when screen under 899px, and added the cooming soon project photo instead of repeating the same container 4 times

--- a/components/projects/projects-div.css
+++ b/components/projects/projects-div.css
@@ -64,12 +64,12 @@
     }
     .project-container {
         min-width: 500px;
-        max-width: 700px;
+        max-width: 600px;
     }
     
     .project-img img {
         min-width: 500px;
-        max-width: 700px;
+        max-width: 600px;
     }
     }
     @media screen and (max-width: 549px){
@@ -80,12 +80,12 @@
     }
     .project-container {
         min-width: 300px;
-        max-width: 700px;
+        max-width: 549px;
     }
     
     .project-img img {
         min-width: 300px;
-        max-width: 500px;
+        max-width: 549px;
         height: 300px;
     }
     }
